cli: Add standalone cilium healthz command
